--- a/raBiProject/test-output/old/Default suite/methods-alphabetical.html
+++ b/raBiProject/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b3fda1">  <td>21/07/23 06:50:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;assignleave_test.exitup()[pri:0, instance:endTOend_raBiProject.assignleave_test@55562aa9]">&lt;&lt;exitup</td> 
-<td>&nbsp;</td>  <td>main@998242313</td>   <td></td> </tr>
-<tr bgcolor="b3fda1">  <td>21/07/23 06:50:23</td>   <td>-25904</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="assignleave_test.leave_assign()[pri:0, instance:endTOend_raBiProject.assignleave_test@55562aa9]">leave_assign</td> 
-  <td>main@998242313</td>   <td></td> </tr>
-<tr bgcolor="b3fda1">  <td>21/07/23 06:50:18</td>   <td>-30581</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;assignleave_test.setup()[pri:0, instance:endTOend_raBiProject.assignleave_test@55562aa9]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@998242313</td>   <td></td> </tr>
+<tr bgcolor="e29181">  <td>21/09/17 01:44:29</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;ApplitToolDemo.afterEach()[pri:0, instance:rough.ApplitToolDemo@5562c41e]">&lt;&lt;afterEach</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1403700359</td>   <td></td> </tr>
+<tr bgcolor="e29181">  <td>21/09/17 01:44:22</td>   <td>-7070</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ApplitToolDemo.basicTest()[pri:0, instance:rough.ApplitToolDemo@5562c41e]">basicTest</td> 
+  <td>main@1403700359</td>   <td></td> </tr>
+<tr bgcolor="e29181">  <td>21/09/17 01:44:20</td>   <td>-9247</td> <td>&nbsp;</td><td title="&gt;&gt;ApplitToolDemo.beforeEach()[pri:0, instance:rough.ApplitToolDemo@5562c41e]">&gt;&gt;beforeEach</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1403700359</td>   <td></td> </tr>
 </table>
