--- a/raBiProject/test-output/index.html
+++ b/raBiProject/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\rbran\AppData\Local\Temp\testng-eclipse-647750608\testng-customsuite.xml</span>
+                    <span>C:\Users\rbran\AppData\Local\Temp\testng-eclipse-1227422050\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content failed suite-Default_suite">
                       <span>
                         <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="endTOend_raBiProject.assignleave_test" class="method navigator-link" hash-for-method="leave_assign">leave_assign</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="rough.ApplitToolDemo" class="method navigator-link" hash-for-method="basicTest">basicTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-Default_suite -->
@@ -122,38 +122,24 @@
           <div class="suite-Default_suite-class-failed">
             <div class="main-panel-header rounded-window-top">
               <img src="failed.png"/>
-              <span class="class-name">endTOend_raBiProject.assignleave_test</span>
+              <span class="class-name">rough.ApplitToolDemo</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="leave_assign">
-                  </a> <!-- leave_assign -->
-                  <span class="method-name">leave_assign</span>
-                  <div class="stack-trace">org.openqa.selenium.ElementClickInterceptedException: element click intercepted: Element &lt;input id=&quot;assignleave_txtToDate&quot; type=&quot;text&quot; name=&quot;assignleave[txtToDate]&quot; class=&quot;calendar hasDatepicker&quot;&gt; is not clickable at point (275, 413). Other element would receive the click: &lt;div class=&quot;ui-datepicker-header ui-widget-header ui-helper-clearfix ui-corner-all&quot;&gt;...&lt;/div&gt;
-  (Session info: chrome=91.0.4472.164)
-Build info: version: &apos;4.0.0-beta-3&apos;, revision: &apos;5d108f9a67&apos;
-System info: host: &apos;LAPTOP-HSQD46T4&apos;, ip: &apos;192.168.225.116&apos;, os.name: &apos;Windows 10&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;15.0.2&apos;
-Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [100abccceabd53f097f6b1d10b886ac3, clickElement {id=2ae0640e-e2cf-4a26-92a9-ceb29ed504d9}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 91.0.4472.164, chrome: {chromedriverVersion: 90.0.4430.24 (4c6d850f087da..., userDataDir: C:\Users\rbran\AppData\Loca...}, goog:chromeOptions: {debuggerAddress: localhost:51985}, javascriptEnabled: true, networkConnectionEnabled: false, pageLoadStrategy: normal, platform: WINDOWS, platformName: WINDOWS, proxy: Proxy(), se:cdp: ws://localhost:51985/devtoo..., se:cdpVersion: 91.0.4472.164, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:largeBlob: true, webauthn:virtualAuthenticators: true}
-Element: [[ChromeDriver: chrome on WINDOWS (100abccceabd53f097f6b1d10b886ac3)] -&gt; xpath: //input[@id=&apos;assignleave_txtToDate&apos;]]
-Session ID: 100abccceabd53f097f6b1d10b886ac3
-	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)
-	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:64)
-	at java.base/jdk.internal.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)
-	at java.base/java.lang.reflect.Constructor.newInstanceWithCaller(Constructor.java:500)
-	at java.base/java.lang.reflect.Constructor.newInstance(Constructor.java:481)
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.createException(W3CHttpResponseCodec.java:198)
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:131)
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:52)
-	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:184)
-	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:153)
-	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:128)
-	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:619)
-	at org.openqa.selenium.remote.RemoteWebElement.execute(RemoteWebElement.java:237)
-	at org.openqa.selenium.remote.RemoteWebElement.click(RemoteWebElement.java:75)
-	at endTOend_raBiProject.assignleave_test.leave_assign(assignleave_test.java:152)
+                  <a name="basicTest">
+                  </a> <!-- basicTest -->
+                  <span class="method-name">basicTest</span>
+                  <div class="stack-trace">com.applitools.eyes.exceptions.TestFailedException: Failed to set the viewport size
+	at com.applitools.eyes.selenium.SeleniumEyes.setViewportSize(SeleniumEyes.java:1540)
+	at com.applitools.eyes.EyesBase.ensureViewportSize(EyesBase.java:1143)
+	at com.applitools.eyes.EyesBase.prepareForOpen(EyesBase.java:868)
+	at com.applitools.eyes.RunningTest.prepareForOpen(RunningTest.java:44)
+	at com.applitools.eyes.EyesBase.openBase(EyesBase.java:890)
+	at com.applitools.eyes.selenium.SeleniumEyes.open(SeleniumEyes.java:318)
+	at com.applitools.eyes.selenium.SeleniumEyes.open(SeleniumEyes.java:282)
+	at com.applitools.eyes.selenium.Eyes.open(Eyes.java:145)
+	at rough.ApplitToolDemo.basicTest(ApplitToolDemo.java:60)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:64)
 	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -182,6 +168,10 @@ Session ID: 100abccceabd53f097f6b1d10b886ac3
 	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
 	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
 	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
+Caused by: com.applitools.eyes.EyesException: Failed to set viewport size!
+	at com.applitools.eyes.selenium.EyesDriverUtils.setViewportSize(EyesDriverUtils.java:551)
+	at com.applitools.eyes.selenium.SeleniumEyes.setViewportSize(SeleniumEyes.java:1534)
+	... 36 more
 
 </div> <!-- stack-trace -->
                 </div> <!-- method-content -->
@@ -191,7 +181,7 @@ Session ID: 100abccceabd53f097f6b1d10b886ac3
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\rbran\AppData\Local\Temp\testng-eclipse-647750608\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\rbran\AppData\Local\Temp\testng-eclipse-1227422050\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -200,7 +190,7 @@ Session ID: 100abccceabd53f097f6b1d10b886ac3
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;endTOend_raBiProject.assignleave_test&quot;/&gt;
+      &lt;class name=&quot;rough.ApplitToolDemo&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -242,14 +232,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'leave_assign')
-data.setCell(0, 2, 'endTOend_raBiProject.assignleave_test')
-data.setCell(0, 3, 25887);
+data.setCell(0, 1, 'basicTest')
+data.setCell(0, 2, 'rough.ApplitToolDemo')
+data.setCell(0, 3, 7063);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 25 seconds</span>
+              <span class="suite-total-time">Total running time: 7 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -275,21 +265,21 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">endTOend_raBiProject.assignleave_test</div> <!-- chronological-class-name -->
-              <div class="configuration-method before">
-                <span class="method-name">setup</span>
+              <div class="chronological-class-name">rough.ApplitToolDemo</div> <!-- chronological-class-name -->
+              <div class="configuration-test before">
+                <span class="method-name">beforeEach</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- configuration-method before -->
+              </div> <!-- configuration-test before -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
-                <span class="method-name">leave_assign</span>
-                <span class="method-start">4679 ms</span>
+                <span class="method-name">basicTest</span>
+                <span class="method-start">2181 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">exitup</span>
-                <span class="method-start">30583 ms</span>
-              </div> <!-- configuration-method after -->
+              <div class="configuration-test after">
+                <span class="method-name">afterEach</span>
+                <span class="method-start">9250 ms</span>
+              </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
