--- a/Selinium_Alpha/test-output/old/Default suite/methods-alphabetical.html
+++ b/Selinium_Alpha/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b1b49b">  <td>23/02/13 00:13:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UICodeChallenge.testUICountries()[pri:0, instance:randomTest.UICodeChallenge@793f29ff]">testUICountries</td> 
-  <td>main@603305436</td>   <td></td> </tr>
+<tr bgcolor="b1b49b">  <td>23/07/05 02:34:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="adsBlockSelenium.adsBlocksUsingExtensions()[pri:0, instance:adsBlock.adsBlockSelenium@5d0bf09b]">adsBlocksUsingExtensions</td> 
+  <td>main@125994398</td>   <td></td> </tr>
 </table>
