--- a/Selinium_Alpha/test-output/old/Default suite/classes.html
+++ b/Selinium_Alpha/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>adsBlock.adsBlockSelenium</td>
+<td>randomTest.scrollToViewTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>adsBlocksUsingExtensions</td>
+<td>testScrollView</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
